; ModuleID = '/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_sha1.c_nn_sha1_hashbyte.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/transports/ws/extr_sha1.c_nn_sha1_hashbyte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nn_sha1 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_sha1_hashbyte(%struct.nn_sha1* %0, i32 %1) #0 {
  %3 = alloca %struct.nn_sha1*, align 8
  %4 = alloca i32, align 4
  store %struct.nn_sha1* %0, %struct.nn_sha1** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.nn_sha1*, %struct.nn_sha1** %3, align 8
  %6 = getelementptr inbounds %struct.nn_sha1, %struct.nn_sha1* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = add nsw i32 %7, 1
  store i32 %8, i32* %6, align 4
  %9 = load %struct.nn_sha1*, %struct.nn_sha1** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @nn_sha1_add(%struct.nn_sha1* %9, i32 %10)
  ret void
}

declare dso_local i32 @nn_sha1_add(%struct.nn_sha1*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
